// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientPage when given clients correctly renders 1`] = `
<div>
  <PageHeader
    bsClass="page-header"
  />
  <div>
    <Component>
      Projects
    </Component>
    <Component />
  </div>
</div>
`;

exports[`ClientPage when loading renders with loading information 1`] = `
<div>
  <PageHeader
    bsClass="page-header"
  />
  <Alert
    bsClass="info"
    bsStyle="info"
    closeLabel="Close alert"
  >
    Fetching client...
  </Alert>
</div>
`;

exports[`ClientPage with error renders with error bar 1`] = `
<div>
  <PageHeader
    bsClass="page-header"
  />
  <Alert
    bsClass="alert"
    bsStyle="info"
    closeLabel="Close alert"
  >
    Could not load client | 
    an error
  </Alert>
</div>
`;
